--- a/html/design_spike_1.html
+++ b/html/design_spike_1.html
@@ -2,29 +2,46 @@
 <head>
   <title>Field example</title>
   <script type="text/javascript" src="../js/paper-full.min.js"></script>
-  <!-- Define inlined PaperScript associate it with myCanvas -->
   <script type="text/paperscript" canvas="myCanvas">
 
     var middle_7 = new Point(100, 70);
     var circle_7 = new Path.Circle(middle_7, 1);
-    circle_7.fillColor = 'red';
+    circle_7.fillColor = new Color(1, 1, 0, 0.7 );
+    circle_7.blendMode = 'multiply';
+
 
     var middle_9 = new Point(210, 30);
     var circle_9 = new Path.Circle(middle_9, 1);
-    circle_9.fillColor = 'green';
+    circle_9.fillColor = new Color(0, 1, 1, 0.7);
+    circle_9.blendMode = 'multiply';
+
 
     var middle_plus = new Point(33, 88);
     var circle_plus = new Path.Circle(middle_plus, 1);
-    circle_plus.fillColor = 'blue';
+    circle_plus.fillColor = new Color(1, 0, 1, 0.7);
+    circle_plus.blendMode = 'multiply';
 
-    var dist79 = middle_7.getDistance(middle_9)
-    var dist7plus = middle_7.getDistance(middle_plus)
-    var dist9plus = middle_9.getDistance(middle_plus)
+    function touched(c) {
+      var x9 = circle_9.getIntersections(c);
+      var x7 = circle_7.getIntersections(c);
+      var xp = circle_plus.getIntersections(c);
+
+      return (x9.length + x7.length + xp.length > 0)
+    }
 
     function onFrame(event) {
-      circle_7.scale(1.01);
-      circle_9.scale(1.01);
-      circle_plus.scale(1.01);
+      
+      if (!touched(circle_7)) {
+        circle_7.scale(1.01)
+      }
+      
+      if (!touched(circle_9)) {
+        circle_9.scale(1.01)
+      }
+
+      if (!touched(circle_plus)) {
+        circle_plus.scale(1.01) 
+      }
     }
   </script>
 </head>
